<?xml version="1.0" encoding="utf-8"?>
<resources>

   <string name="app_name">LoginScreen</string>
   <string name="action_settings">Settings</string>
   <string name="hello_world">Login Screen</string>
   <string name="emailaddress">EmailAddress:</string>
   <string name="password">Password:</string>
   <string name="Login">Login:</string>
   <string name="attempts">Attempts Left:</string>
   <string name="new_contract">Create New Contract</string>
   <string name="today_update">Todays Update</string>
   <string name="register_room">Register Available Room</string>
   <string name="search_existing">Search Existing Contract</string>
   <string name="change_password">Change Password</string>
   <string name="name">Name</string>
   <string name="primaryphone">Primary Phone#</string>
   <string name="alternatephone">Alternate Phone#</string>
   <string name="addressline">Address Line</string>
   <string name="city">City</string>
   <string name="state">State</string>
   <string name="pin">Pin</string>
   <string name="register">Register</string>
   

</resources>