<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:paddingBottom="@dimen/activity_vertical_margin"
   android:paddingLeft="@dimen/activity_horizontal_margin"
   android:paddingRight="@dimen/activity_horizontal_margin"
   android:paddingTop="@dimen/activity_vertical_margin"
   tools:context=".MainActivity" >
   
   <Button
      android:id="@+id/button2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="18dp"
      android:onClick="@string/new_contract"
      android:text="@string/new_contract"/>
     
   
   <Button
      android:id="@+id/button3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/button2"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="18dp"
      android:onClick="@string/today_update"
      android:text="@string/today_update"/>
     
   
   <Button
      android:id="@+id/button4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
   
      android:layout_below="@+id/button3"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="18dp"
      android:onClick="@string/register_room"
      android:text="@string/register_room"/>
   
<Button
      android:id="@+id/button5"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/button4"
       android:layout_centerHorizontal="true"
      android:layout_marginTop="18dp"
      android:onClick="@string/search_existing"
      android:text="@string/search_existing"/>
      
   <Button
      android:id="@+id/button6"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/button5"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="18dp"
      android:onClick="@string/change_password"
      android:text="@string/change_password"/>
 
   
</RelativeLayout>