<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editText3"
            android:inputType="text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emailaddress"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editText4"
            android:inputType="text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" >

        </EditText>
    </LinearLayout>
 <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/primaryphone"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editText6"
            android:inputType="text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" >

        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alternatephone"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editText7"
            android:inputType="text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" >

        </EditText>
    </LinearLayout>
 <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addressline"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editText8"
            android:inputType="text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" >

        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editText9"
            android:inputType="text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" >

        </EditText>
    </LinearLayout>
 
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/state"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editText10"
            android:inputType="text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" >

        </EditText>
    </LinearLayout>
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pin"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editText11"
            android:inputType="text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" >

        </EditText>
            <Button
      android:id="@+id/button7"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/editText11"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="36dp"
      android:onClick="login"
      android:text="@string/register" />
        
    </LinearLayout>
     
 
    
</LinearLayout>
<!-- <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:paddingBottom="@dimen/activity_vertical_margin"
   android:paddingLeft="@dimen/activity_horizontal_margin"
   android:paddingRight="@dimen/activity_horizontal_margin"
   android:paddingTop="@dimen/activity_vertical_margin"
   tools:conTextView=".MainActivity" >
    <TextView
      android:id="@+id/textView6"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:layout_centerHorizontal="false"
      android:layout_marginTop="18dp"
      android:text="@string/name"/>
     <EditText
      android:inputType="text"
      android:id="@+id/editText3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerHorizontal="false"
      android:layout_toRightOf="@+id/textView6"
      android:layout_marginTop="18dp"
      android:ems="10" >

      <requestFocus />
   </EditText>
     
    
     
   
   <TextView
      android:id="@+id/textView7"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/textView6"
      android:layout_centerHorizontal="false"
      android:layout_marginTop="18dp"
      android:text="@string/emailaddress"/>
   <EditText
       android:inputType="text"
      android:id="@+id/editText4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerHorizontal="false"
      android:layout_alignBottom="@+id/editText3"
      android:layout_marginTop="61dp"
      android:layout_below="@+id/editText3"
      android:ems="10" >
      <requestFocus />
   </EditText>
       
     
   
   <TextView
      android:id="@+id/textView8"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
   
      android:layout_below="@+id/textView7"
      android:layout_centerHorizontal="false"
      android:layout_marginTop="18dp"
      android:text="@string/primaryphone"/>
   
<TextView
      android:id="@+id/textView9"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/textView8"
       android:layout_centerHorizontal="false"
      android:layout_marginTop="18dp"
      android:text="@string/alternatephone"/>
      
   <TextView
      android:id="@+id/textView10"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/textView9"
      android:layout_centerHorizontal="false"
      android:layout_marginTop="18dp"
      android:text="@string/addressline"/>
   <TextView
      android:id="@+id/textView11"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/textView10"
      android:layout_centerHorizontal="false"
      android:layout_marginTop="18dp"
      android:text="@string/city"/>
   <TextView
      android:id="@+id/textView12"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/textView11"
      android:layout_centerHorizontal="false"
      android:layout_marginTop="18dp"
      android:text="@string/state"/>
    <TextView
      android:id="@+id/textView13"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/textView12"
      android:layout_centerHorizontal="false"
      android:layout_marginTop="18dp"
      android:text="@string/pin"/>
 -->   
    
 <!-- 
   <TextViewView
      android:id="@+id/TextViewView6"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerHorizontal="false"
      android:TextView="@string/emailaddress"/>
     
   
    <EditTextView
      android:id="@+id/editTextView3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerHorizontal="false"
      android:layout_toRightOf="@+id/TextViewView6"
      android:ems="10" >

      <requestFocus />
   </EditTextView>

 <TextViewView
      android:id="@+id/TextViewView7"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:layout_alignBottom="@+id/TextViewView6"
      android:layout_centerHorizontal="false"
      android:TextView="@string/name"/>
     
   
    <EditTextView
      android:id="@+id/editTextView4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignBottom="@+id/editTextView3"
      android:layout_toRightOf="@+id/TextViewView7"
      android:ems="10" >

      <requestFocus />
   </EditTextView>
    
   <TextViewView
      android:id="@+id/TextViewView8"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="18dp"
      android:TextView="@string/primaryphone"/>
     
   
    <EditTextView
      android:id="@+id/editTextView5"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignBottom="@+id/editTextView4"
      android:layout_marginLeft="6dp"
      android:layout_toRightOf="@+id/TextViewView8"
      android:ems="10" >

      <requestFocus />
   </EditTextView>
   <TextViewView
      android:id="@+id/TextViewView9"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="18dp"
      android:TextView="@string/alternatephone"/>
     
   
    <EditTextView
      android:id="@+id/editTextView6"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignBottom="@+id/editTextView4"
      android:layout_marginLeft="6dp"
      android:layout_toRightOf="@+id/TextViewView9"
      android:ems="10" >

      <requestFocus />
   </EditTextView>
   
     <TextViewView
      android:id="@+id/TextViewView10"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="18dp"
      android:TextView="@string/addressline"/>
     
   
    <EditTextView
      android:id="@+id/editTextView7"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignBottom="@+id/editTextView4"
      android:layout_marginLeft="6dp"
      android:layout_toRightOf="@+id/TextViewView10"
      android:ems="10" >

      <requestFocus />
   </EditTextView>
    
<TextViewView
      android:id="@+id/TextViewView11"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="18dp"
      android:TextView="@string/city"/>
     
   
    <EditTextView
      android:id="@+id/editTextView8"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignBottom="@+id/editTextView4"
      android:layout_marginLeft="6dp"
      android:layout_toRightOf="@+id/TextViewView11"
      android:ems="10" >

      <requestFocus />
   </EditTextView>
   
    <TextViewView
      android:id="@+id/TextViewView12"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="18dp"
      android:TextView="@string/state"/>
     
   
    <EditTextView
      android:id="@+id/editTextView9"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignBottom="@+id/editTextView4"
      android:layout_marginLeft="6dp"
      android:layout_toRightOf="@+id/TextViewView12"
      android:ems="10" >

      <requestFocus />
   </EditTextView>
    
    <TextViewView
      android:id="@+id/TextViewView13"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="18dp"
      android:TextView="@string/pin"/>
     
   
    <EditTextView
      android:id="@+id/editTextView10"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignBottom="@+id/editTextView4"
      android:layout_marginLeft="6dp"
      android:layout_toRightOf="@+id/TextViewView13"
      android:ems="10" >

      <requestFocus />
   </EditTextView>
</RelativeLayout>    
   -->  
    
  
   
